feat: implement durable admin cancellation and position clearance